<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="center_horizontal"
    android:orientation="vertical"
>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="100dp"
        android:minWidth="100dp"
    >
        <ImageView
            android:layout_width="400dp"
            android:layout_height="100dp"
            android:src="@drawable/elgin_logo"
        />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="503dp"
            android:layout_height="141dp"
            android:layout_marginVertical="10dp"
            android:gravity="center">

            <Button
                android:drawableTop="@drawable/elginpay_l"
                android:id="@+id/buttonE1Bridge"
                android:layout_width="223dp"
                android:layout_height="123dp"
                android:layout_marginEnd="10dp"
                android:layout_margin="20dp"
                android:background="@drawable/box"
                android:gravity="center_horizontal"
                android:paddingTop="40dp"
                android:text="@string/text_title_e1_bridge"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:backgroundTint="@color/black"
                />

            <Button
                android:id="@+id/buttonPrinterOption"
                android:layout_width="111dp"
                android:layout_height="124dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/box"
                android:drawableTop="@drawable/printer"
                android:gravity="center_horizontal"
                android:paddingTop="20dp"
                android:text="@string/text_button_printer"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:backgroundTint="@color/black" />

            <Button
                android:id="@+id/buttonBalancaOption"
                android:layout_width="100dp"
                android:layout_height="120dp"
                android:layout_alignParentRight="true"
                android:layout_marginStart="5dp"
                android:background="@drawable/box"
                android:drawableTop="@drawable/balanca"
                android:gravity="center_horizontal"
                android:paddingTop="10dp"
                android:text="Balança"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:backgroundTint="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="496dp"
            android:layout_height="126dp"
            android:layout_marginVertical="10dp"
            android:gravity="center">

            <Button
                android:id="@+id/buttonBarCodeReaderOption"
                android:layout_width="100dp"
                android:layout_height="120dp"
                android:layout_marginStart="5dp"
                android:background="@drawable/box"
                android:drawableTop="@drawable/bar_code"
                android:gravity="center_horizontal"
                android:paddingTop="10dp"
                android:text="@string/text_button_barCode"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:backgroundTint="@color/black" />

            <Button
                android:id="@+id/buttonTefOption"
                android:layout_width="100dp"
                android:layout_height="120dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/box"
                android:drawableTop="@drawable/tef"
                android:gravity="center_horizontal"
                android:paddingTop="12dp"
                android:text="@string/text_button_tef"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:backgroundTint="@color/black" />

            <Button
                android:id="@+id/buttonShipay"
                android:layout_width="100dp"
                android:layout_height="120dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_toEndOf="@+id/buttonTefOption"
                android:background="@drawable/box"
                android:drawableTop="@drawable/tef"
                android:gravity="center_horizontal"
                android:paddingTop="12dp"
                android:text="@string/text_button_shipay"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:backgroundTint="@color/black" />

            <Button
                android:id="@+id/buttonSAT"
                android:layout_width="116dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@+id/buttonShipay"
                android:background="@drawable/box"
                android:drawableTop="@drawable/sat"
                android:gravity="center_horizontal|top"
                android:paddingTop="20dp"
                android:text="@string/text_button_sat"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:backgroundTint="@color/black" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_footer_kotlin"
            android:textColor="#7F7F7F"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="50dp" />
    </RelativeLayout>
</LinearLayout>